[package]
name = "gb-parser"
version = "0.0.1"
authors = ["Martin Schmidt <martin.schmidt@lse.epita.fr>"]
edition = "2018"
license = "MIT"
description = "A parser for Gameboy instructions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
