[package]
name = "gb-parser"
version = "0.0.7"
authors = ["Martin Schmidt <martin.schmidt@lse.epita.fr>"]
edition = "2018"
license = "MIT"
description = "A parser for Gameboy instructions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "parser"
path = "src/parser/mod.rs"

[[bin]]
name = "print_disass"
path = "src/main.rs"

[dependencies]
